--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Hi! Welcome to my project. This is nothing more than the name says: an binnacle. 
 Here i'll put some of my thoughts and stuff. This is not a software project. 
-Everyone is welcomed to live their comments on the COMMENTS file on the VISITORS 
-folder, quoting the ISLAND # on the following format: #<ISLAND ID>-<COMMENT>. 
+Everyone is welcomed to live their comments on the COMMENTS issue, quoting the 
+ISLAND # on the following format: #<ISLAND ID>-<COMMENT>. 
 
 Thanks everybody. I also accept spanish comments.
